# dataframe-analyst-mcp

./: .gitignore  README.md  pyproject.toml
dataframe_analyst_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: demo_script.md  gsheet_info.txt  ventas_2023.csv  ventas_2023.xlsx
src/: server.py
src/dataframe_analyst_mcp/: server.py  state.py
src/dataframe_analyst_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dataframe_analyst_mcp/tools/: corr.py  io_gsheet.py  loader.py  profile.py
src/tools/: export_report.py  groupby.py  io_gdrive.py  io_local.py  missing.py  outliers.py  profile.py  schema.py
tests/: test_outliers.py  test_profile.py
