[build-system]
requires = ["setuptools>=68", "wheel"]          # ← antes decía setuxptools (typo)
build-backend = "setuptools.build_meta"

[project]
name = "dataframe-analyst-mcp"
version = "0.1.0"
description = "MCP server for CSV/Excel/Google Sheets/Drive EDA"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]

# Nota: xlrd==1.2.0 es para leer .xls (las versiones 2.x ya no lo soportan).
# En Python 3.13 puede fallar; si pasa eso, usa Python 3.11 (abajo te dejo comandos).
dependencies = [
  "pandas>=2.1",
  "openpyxl>=3.1",          # .xlsx
  "xlrd==1.2.0",            # .xls antiguo
  "gspread>=6.0",
  "google-auth>=2.28",
  "pydrive2>=1.19",
  # "mcp>=0.1",             # déjalo comentado si PyPI no lo resuelve; tu server tiene CLI fallback
  "typing-extensions>=4.9",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
